--- a/client/css/layout.css
+++ b/client/css/layout.css
@@ -881,6 +881,9 @@ button[icon].green {
 button[icon].green:hover {
   background-color: #004f00;
 }
+button[icon].green:disabled:hover {
+  background-color: darkgreen;
+}
 
 .prettyButton {
   border: 5px;
@@ -906,6 +909,15 @@ button[icon].green:hover {
   height: 18px;
   font-size: 24px;
   line-height: 18px;
+}
+
+button.visualProgress {
+  --stripesColor1: #006400;
+  --stripesColor2: #006400;
+  position: relative;
+  background-image: linear-gradient(135deg, #006400 0%, #006400 100%);
+  background-size: calc(var(--progress) * 100%) 100%;
+  background-repeat: no-repeat;
 }
 
 .richtext-controls {
@@ -1060,7 +1072,7 @@ button.add::before {
 
 button:disabled,
 button:disabled:hover {
-  background: #808080;
+  background-color: #808080;
   color: #d3d3d3;
   cursor: not-allowed;
 }
