--- a/client/css/editor/sidebarModules.css
+++ b/client/css/editor/sidebarModules.css
@@ -104,6 +104,57 @@
 }
 
 
+.tune.editorModule .cardTypeEdit {
+  display: inline-flex;
+  flex-direction: column;
+  align-items: center;
+  margin: 10px;
+  padding: 10px;
+}
+.tune.editorModule .cardCountDiv {
+  float: left;
+}
+.tune.editorModule .cardCountDiv button {
+  display: inline-flex;
+}
+.tune.editorModule .cardCountDiv input {
+  font-size: 30px;
+  width: 54px;
+  text-align: right;
+}
+.tune.editorModule .renderedWidget {
+  margin: 5px;
+}
+.tune.editorModule .cardCountDivEditing {
+  background: var(--backgroundHighlightColor1);
+  border: 1px solid var(--textColor);
+  border-radius: 5px;
+}
+.tune.editorModule .cardCountDivEditing [icon=create] {
+  display: none;
+}
+.tune.editorModule .cardTypeProperties {
+  padding: 10px;
+}
+.tune.editorModule .cardTypeProperties .buttonBar {
+  margin-top: 10px;
+}
+.tune.editorModule .cardTypeEdit:not(.cardCountDivEditing) .cardTypeProperties {
+  display: none;
+}
+
+
+.genericInput input, .genericInput textarea {
+  width: 200px;
+  min-width: 200px;
+}
+.genericInput textarea {
+  height: 200px;
+}
+.genericInput > * {
+  vertical-align: top;
+}
+
 /* undo */
 
 .undo.editorModule > .undoEntry {
