centered "Loading room..." and made it bigger

--- a/client/css/overlays/welcome.css
+++ b/client/css/overlays/welcome.css
@@ -1,3 +1,8 @@
+#loadingRoomIndicator {
+  text-align: center;
+  margin-top: 485px;
+  color: var(--VTTblue);
+}
 
 #linkDetailsOverlay {
   color: var(--overlayFontColor);
