--- a/client/css/overlays/welcome.css
+++ b/client/css/overlays/welcome.css
@@ -49,7 +49,7 @@
   margin: auto;
   margin-top: 20px;
 }
-#linkDetailsOverlay .addToRoomBox button[icon=share] {
+#welcomeShareButton {
   display: inline-flex;
   padding: 2px;
   vertical-align: middle;
