added a button to create an empty room under error message

--- a/client/css/overlays/welcome.css
+++ b/client/css/overlays/welcome.css
@@ -3,6 +3,9 @@
   margin-top: 485px;
   color: var(--VTTblue);
 }
+#loadingRoomIndicator + div button {
+  margin: auto;
+}
 
 #linkDetailsOverlay {
   color: var(--overlayFontColor);
