--- a/client/css/overlays/states.css
+++ b/client/css/overlays/states.css
@@ -395,7 +395,7 @@ div:nth-of-type(2) > .list > .roomState .star {
   color: var(--overlayFontColor);
 }
 
-#stateDetailsOverlay > .buttons.one, #linkDetailsOverlay > .buttons.one {
+#stateDetailsOverlay > .buttons.one {
   position: absolute;
   right: 10px;
   top: 10px;
@@ -420,12 +420,12 @@ div:nth-of-type(2) > .list > .roomState .star {
   display: none;
 }
 
-:root {
+#stateDetailsOverlay {
   --mainDetailsHeight: 300px;
   --similarDetailsHeight: 200px;
   --arrowButtonsSize: 160px;
 }
-.mainStateDetails, #similarDetails, #variantsList, #helpTexts {
+#mainDetails, #similarDetails, #variantsList, #helpTexts {
   position: absolute;
   width: 60%;
   top: 10px;
@@ -440,21 +440,21 @@ div:nth-of-type(2) > .list > .roomState .star {
 #stateDetailsOverlay img {
   object-fit: cover;
 }
-.mainStateImage, #similarImage {
+#mainImage, #similarImage {
   position: fixed;
   height: var(--mainDetailsHeight);
   width: var(--mainDetailsHeight);
 }
-.mainStateImage img, #similarImage img, .variant-image img, .mainStateImage > div, #similarImage div, .variant-image div {
+#mainImage img, #similarImage img, .variant-image img, #mainImage > div, #similarImage div, .variant-image div {
   position: absolute;
   height: 100%;
   width: 100%;
   border-radius: 20px 0 0 20px;
 }
-.mainStateImage > div, #similarImage div, .variant-image div {
+#mainImage > div, #similarImage div, .variant-image div {
   background: #fff8;
 }
-#stateDetailsOverlay .mainStateDetails > .details > div:nth-of-type(1) {
+#mainDetails > .details > div:nth-of-type(1) {
   position: absolute;
   bottom: 10px;
   left: 10px;
@@ -462,44 +462,44 @@ div:nth-of-type(2) > .list > .roomState .star {
 .notEditing .onlyForEdit, .editing .hideForEdit {
   display: none !important;
 }
-.mainStateImage > div button, #similarImage div button, .variant-image div button {
+#mainImage > div button, #similarImage div button, .variant-image div button {
   margin: calc(50% - 17px) auto;
 }
-.mainStateDetails .details, #similarDetails .details {
+#mainDetails .details, #similarDetails .details {
   margin-left: var(--mainDetailsHeight);
   padding-left: 20px;
   padding-top: 14px;
   padding-bottom: 14px;
 }
-.mainStateDetails h1, #similarDetails h1 {
+#mainDetails h1, #similarDetails h1 {
   color: var(--VTTblue);
   text-align: left;
   margin-top: 0;
   margin-bottom: 8px;
 }
-.mainStateDetails .material-icons, #similarDetails .material-icons {
+#mainDetails .material-icons, #similarDetails .material-icons {
   top: 5px;
   position: relative;
 }
-.mainStateDetails .star, .mainStateDetails .mainStateImage > i, .mainStateImage span {
+#mainDetails .star, #mainDetails #mainImage > i, #mainImage span {
   position: fixed;
   font-size: 50px;
   background: none;
   text-shadow: 2px 2px 4px #444;
 }
-.mainStateDetails .star::before {
+#mainDetails .star::before {
   font-size: 50px;
   width: 50px;
 }
-.mainStateDetails .mainStateImage > i {
+#mainDetails #mainImage > i {
   top: unset;
   color: white;
   padding: 9px;
 }
-.mainStateImage .active.star, .mainStateImage .active.star + span {
+#mainImage .active.star, #mainImage .active.star + span {
   color: gold;
 }
-.mainStateImage span {
+#mainImage span {
   position: absolute;
   font-size: 16px;
   top: 51px;
@@ -508,7 +508,7 @@ div:nth-of-type(2) > .list > .roomState .star {
   color: white;
   font-weight: bold;
 }
-.mainStateDetails p, #similarDetails p {
+#mainDetails p, #similarDetails p {
   margin-top: 8px;
   margin-bottom: 0;
 }
@@ -739,21 +739,21 @@ div:nth-of-type(2) > .list > .roomState .star {
 }
 
 @media (max-width: 1260px), (max-height: 787px), (min-width: 1421px) and (min-height: 888px) {
-  :root {
+  #stateDetailsOverlay {
     --mainDetailsHeight: 200px;
     --similarDetailsHeight: 160px;
     --arrowButtonsSize: 100px;
   }
-  #stateDetailsOverlay .mainStateDetails .details, #similarDetails .details {
+  #mainDetails .details, #similarDetails .details {
     padding-top: 10px;
     padding-bottom: 10px;
   }
-  #stateDetailsOverlay .mainStateDetails > .details > div + div {
+  #mainDetails > .details > div + div {
     display: inline-block;
     font-size: 14px;
     margin-right: 10px;
   }
-  #stateDetailsOverlay .mainStateDetails .material-icons {
+  #mainDetails .material-icons {
     font-size: 18px;
     top: 3px;
   }
@@ -767,11 +767,11 @@ div:nth-of-type(2) > .list > .roomState .star {
   }
 }
 @media (max-width: 957px), (max-height: 600px), (max-width: 1000px) and (max-height: 643px), (min-width: 1421px) and (min-height: 888px) {
-  :root {
+  #stateDetailsOverlay {
     --mainDetailsHeight: 150px;
     --similarDetailsHeight: 150px;
   }
-  #stateDetailsOverlay .mainStateDetails, #similarDetails, #variantsList, #helpTexts {
+  #mainDetails, #similarDetails, #variantsList, #helpTexts {
     position: unset;
     overflow: unset;
     margin: 20px auto;
@@ -783,33 +783,33 @@ div:nth-of-type(2) > .list > .roomState .star {
   #stateDetailsOverlay #similarDetails.hidden, #stateDetailsOverlay #helpTexts.hidden {
     display: none !important;
   }
-  #stateDetailsOverlay .mainStateDetails {
+  #mainDetails {
     position: relative;
     top: 0;
     left: 0;
     margin-top: 60px;
   }
-  #stateDetailsOverlay .mainStateImage, #similarImage {
+  #mainImage, #similarImage {
     position: relative;
     float: left;
     margin-right: 10px;
   }
-  #stateDetailsOverlay .mainStateImage img, #similarImage img, #stateDetailsOverlay .mainStateImage > div, #similarImage div {
+  #mainImage img, #similarImage img, #mainImage > div, #similarImage div {
     height: var(--mainDetailsHeight);
     width: var(--mainDetailsHeight);
     border-radius: 10px;
   }
-  #stateDetailsOverlay .mainStateDetails > .details > div:nth-of-type(1) {
+  #mainDetails > .details > div:nth-of-type(1) {
     position: absolute;
     bottom: unset;
     top: 140px;
     left: 30px;
   }
-  #stateDetailsOverlay .mainStateDetails .details, #similarDetails .details {
+  #mainDetails .details, #similarDetails .details {
     padding-top: 0;
     padding-bottom: 0;
   }
-  #stateDetailsOverlay .mainStateDetails .star, #stateDetailsOverlay .mainStateDetails .mainStateImage > i {
+  #mainDetails .star, #mainDetails #mainImage > i {
     position: absolute;
   }
   #nextState, #prevState {
@@ -823,39 +823,39 @@ div:nth-of-type(2) > .list > .roomState .star {
   }
 }
 @media (max-width: 500px), (max-height: 312px) {
-  :root {
+  #stateDetailsOverlay {
     --mainDetailsHeight: 50px;
     --similarDetailsHeight: 50px;
   }
-  .mainStateDetails, #similarDetails, #variantsList, #helpTexts {
+  #mainDetails, #similarDetails, #variantsList, #helpTexts {
     padding: 10px;
     margin: 10px auto;
   }
-  .mainStateDetails {
+  #mainDetails {
     margin-top: 60px;
   }
-  .mainStateDetails h1, #similarDetails h1 {
+  #mainDetails h1, #similarDetails h1 {
     margin: 8px;
     min-height: 40px;
   }
-  .mainStateDetails .details, #similarDetails .details {
+  #mainDetails .details, #similarDetails .details {
     margin: unset;
     padding: unset;
   }
-  .mainStateDetails > .details > div:nth-of-type(1) {
+  #mainDetails > .details > div:nth-of-type(1) {
     position: unset;
   }
-  .mainStateDetails .star::before, .mainStateDetails .mainStateImage > i {
+  #mainDetails .star::before, #mainDetails #mainImage > i {
     font-size: 32px;
   }
-  .mainStateImage button, #similarImage button {
+  #mainImage button, #similarImage button {
     font-size: 0;
     padding: 5px;
   }
-  .mainStateImage button::before, #similarImage button::before {
+  #mainImage button::before, #similarImage button::before {
     margin: 0;
   }
-  .mainStateImage span {
+  #mainImage span {
     display: none;
   }
   #variantsList {
@@ -893,7 +893,7 @@ div:nth-of-type(2) > .list > .roomState .star {
   }
 }
 @media (max-width: 270px), (max-height: 168px) {
-  #stateDetailsOverlay.editing .mainStateDetails {
+  #stateDetailsOverlay.editing #mainDetails {
     margin-top: 0;
   }
   #stateDetailsOverlay.editing > .buttons {
@@ -922,7 +922,7 @@ div:nth-of-type(2) > .list > .roomState .star {
   #stateDetailsOverlay {
     background: var(--roomColor);
   }
-  #helpTexts, #stateDetailsOverlay  .mainStateDetails, #similarDetails, #variantsList {
+  #helpTexts, #mainDetails, #similarDetails, #variantsList {
     background: white;
   }
 }
@@ -934,7 +934,7 @@ div:nth-of-type(2) > .list > .roomState .star {
   background-repeat: repeat
 }
 
-#stateDetailsOverlay .hidden, .mainStateDetails .hidden {
+#stateDetailsOverlay .hidden {
   display: none !important;
 }
 
@@ -1106,10 +1106,6 @@ div:nth-of-type(2) > .list > .roomState .star {
 #shareLinkOverlay > div > div {
   max-width: 600px;
   margin: 0 auto;
-}
-
-#shareLinkOverlay.customGame .plGameInfo, #shareLinkOverlay.plGame .customGameInfo {
-  display: none;
 }
 
 @media (max-width: 800px), (max-height: 500px) {
