--- a/client/css/overlays/welcome.css
+++ b/client/css/overlays/welcome.css
@@ -61,8 +61,9 @@
   margin: auto;
   margin-top: 20px;
 }
-#linkDetailsOverlay p[icon]::before {
-  left: 32px;
+#welcomeUserGenerated {
+  position: relative;
+  max-width: 500px;
 }
 
 #linkDetailsOverlay > .buttons.one {
