decreased font size of link symbol for smallest viewport

--- a/client/css/overlays/welcome.css
+++ b/client/css/overlays/welcome.css
@@ -232,6 +232,9 @@
   .mainStateImage .star, .mainStateImage .star + span {
     display: none;
   }
+  #linkDetailsOverlay > .mainStateDetails i {
+    font-size: 32px;
+  }
   #linkDetailsOverlay .addToRoomBox {
     padding: 10px;
     margin-bottom: 10px;
