--- a/client/css/widgets/holder.css
+++ b/client/css/widgets/holder.css
@@ -13,13 +13,21 @@
 }
 
 .holder.hasText {
-  color: black; 
+  color: black;
+ 
+  justify-content: center;
+ 
+}
+
+.holder.hasImage.hasText {
+  background-repeat: no-repeat;
+  background-position: center center;
+  background-size: 100% 100%;
+  color: black;
   display: flex;
   justify-content: center;
   align-items: center;
-  text-align: center;
 }
-
 
 .holder.droppable.droptarget{
   border-color: #333!important;
