Fix unreadable overlay font color in dark mode
When using dark mode, text in some overlays is unreadable because it is dark on dark.  For example, this happens in the icon picker and in the save game overlay.

--- a/client/css/layout.css
+++ b/client/css/layout.css
@@ -33,6 +33,14 @@ body {
   font-family: 'Roboto', sans-serif;
 }
 
+body.darkMode input {
+  --overlayFontColor: #ffffff;
+}
+
+body.darkMode input::placeholder {
+  color: #ffffff;
+}
+
 body.loadingEditMode * {
   cursor: wait;
 }
