added support for tiled images in deck generator

--- a/client/css/editor/sidebarModules.css
+++ b/client/css/editor/sidebarModules.css
@@ -96,6 +96,7 @@
 
 .tune.editorModule .cardFrontPreview > div {
   flex-grow: 1;
+  text-align: left;
 }
 
 .tune.editorModule .cardFrontPreview [type=number] {
