fixed broken image for non-default paths

--- a/client/css/editor/sidebarModules.css
+++ b/client/css/editor/sidebarModules.css
@@ -99,6 +99,10 @@
   text-align: left;
 }
 
+.tune.editorModule .cardFrontPreview img {
+  max-width: 50%;
+}
+
 .tune.editorModule .cardFrontPreview [type=number] {
   vertical-align: super;
   width: 50px;
