added support for tiled images in deck generator (#2174)

--- a/client/css/editor/sidebarModules.css
+++ b/client/css/editor/sidebarModules.css
@@ -96,6 +96,11 @@
 
 .tune.editorModule .cardFrontPreview > div {
   flex-grow: 1;
+  text-align: left;
+}
+
+.tune.editorModule .cardFrontPreview img {
+  max-width: 50%;
 }
 
 .tune.editorModule .cardFrontPreview [type=number] {
