added support for `icon` on dice faces, improved JSON editor commands, added `rotation` to icon parameters

--- a/client/css/widgets/imagewidget.css
+++ b/client/css/widgets/imagewidget.css
@@ -20,7 +20,7 @@
   max-width: var(--targetSize);
   font-size: var(--targetSize);
   color: var(--color);
-  transform: translate(var(--offsetX), var(--offsetY));
+  transform: translate(var(--offsetX), var(--offsetY)) rotate(var(--rotation));
   background-image: var(--image);
 }
 .widget:hover > .symbolOuterWrapper > .symbolWrapper > div {
