ensure that the game is rendered in light mode

--- a/client/css/editor/layout.css
+++ b/client/css/editor/layout.css
@@ -38,6 +38,9 @@ body.edit.darkMode {
 
   color-scheme: dark;
 }
+#room {
+  color-scheme: light;
+}
 
 body:not(.edit) #editor,
 body.edit #toolbar {
