--- a/client/css/fonts.css
+++ b/client/css/fonts.css
@@ -467,12 +467,18 @@
 
 #symbolPickerOverlay .emoji {
   word-break: break-all;
-  font-family: 'Noto Emoji';
 }
 
-#symbolPickerOverlay .emoji:hover, #symbolPickerOverlay .emojiFlag, #symbolPickerOverlay.fewResults .emoji {
+#symbolPickerOverlay .emojiMonochrome {
+  font-family: 'Noto Emoji';
+  font-size: calc(0.85 * var(--symbolSize));
+  vertical-align: top;
+}
+
+#symbolPickerOverlay .emojiColor:hover, #symbolPickerOverlay .emojiFlag, #symbolPickerOverlay.fewResults .emojiColor {
   background: var(--url) center no-repeat;
   color: transparent;
+  top: -3px;
 }
 
 #symbolPickerOverlay .gameicons {
