made monochrome emojis work on buttons and basic widgets using `classes:emoji-monochrome`

--- a/client/css/fonts.css
+++ b/client/css/fonts.css
@@ -269,14 +269,6 @@
     font-display: block;
 }
 
-@font-face {
-    font-family: "Noto Emoji";
-    font-style: normal;
-    font-weight: 400;
-    src: url("i/fonts/NotoEmoji-VariableFont_wght.ttf") format("truetype");
-    font-display: block;
-}
-
 .material-icons, .material-icons-outlined, .material-icons-round, .material-icons-sharp, .material-icons-twotone, .font-material-icons {
     font-weight: normal;
     font-style: normal;
@@ -315,6 +307,19 @@
 
 .material-icons-twotone {
     font-family: "Material Icons Two Tone";
+}
+
+@font-face {
+  font-family: "Noto Emoji";
+  font-style: normal;
+  font-weight: 300 700;
+  src: url("i/fonts/NotoEmoji-VariableFont_wght.ttf") format("truetype");
+  font-display: block;
+}
+
+.emoji-monochrome {
+  font-family: "Noto Emoji";
+  font-weight: 400;
 }
 
 @font-face {
@@ -469,13 +474,12 @@
   word-break: break-all;
 }
 
-#symbolPickerOverlay .emojiMonochrome {
-  font-family: 'Noto Emoji';
+#symbolPickerOverlay .emoji-monochrome {
   font-size: calc(0.85 * var(--symbolSize));
   vertical-align: top;
 }
 
-#symbolPickerOverlay .emojiColor:hover, #symbolPickerOverlay .emojiFlag, #symbolPickerOverlay.fewResults .emojiColor {
+#symbolPickerOverlay .emoji-color:hover, #symbolPickerOverlay .emojiFlag, #symbolPickerOverlay.fewResults .emoji-color {
   background: var(--url) center no-repeat;
   color: transparent;
   top: -3px;
@@ -503,11 +507,12 @@
 
 #symbolPickerOverlay .hidden,
 #symbolPickerOverlay.hideImages h2.imageCategory,
-#symbolPickerOverlay.hideImages .emoji,
+#symbolPickerOverlay.hideImages .emoji-color,
 #symbolPickerOverlay.hideImages .gameicons,
 #symbolPickerOverlay.hideFonts h2.fontCategory,
 #symbolPickerOverlay.hideFonts .symbols,
-#symbolPickerOverlay.hideFonts .material-icons {
+#symbolPickerOverlay.hideFonts .material-icons,
+#symbolPickerOverlay.hideFonts .emoji-monochrome {
   display: none;
 }
 
