added support for monochrome emojis in `icon`

--- a/client/css/widgets/imagewidget.css
+++ b/client/css/widgets/imagewidget.css
@@ -67,6 +67,13 @@
   font-family: "VTT-Symbols";
 }
 
+.symbolWrapper > div.autoIconAlignNotoEmojiMonochrome {
+  font-family: "Noto Emoji";
+  font-size: calc(var(--targetSize) / 1.27);
+  position: relative;
+  top: 12%;
+}
+
 .autoIconAlignCustomAsset {
   background-size: contain;
 }
