Fix pile overlay color in darkmode
Fixes #2306.

--- a/client/css/layout.css
+++ b/client/css/layout.css
@@ -1652,6 +1652,7 @@ input.switchbox[type="checkbox"]:checked + .switchbox{
   -moz-appearance: textfield;
   appearance: textfield;
   margin: 0;
+  color: black
 }
 .countInput input[type=number]::-webkit-inner-spin-button,
 .countInput input[type=number]::-webkit-outer-spin-button {
