Replace Google Material Icons with Material Symbols
This impacts games and the UI.

Needs a file updater and some visual testing of the UI because that stuff is everywhere.  I think I got everything.  But this was a bigger undertaking than expected because the default for the old Icons was "filled" and that had to be manually applied in some location in the UI.

--- a/client/css/editor/sidebarModules.css
+++ b/client/css/editor/sidebarModules.css
@@ -40,7 +40,7 @@
   border: 3px solid var(--VTTblue);
 }
 .editorModule .widgetSelectionButton.selected::after {
-  font-family: 'Material Icons';
+  font-family: 'Material Symbols';
   line-height: 1.25em;
   text-align: center;
   height: 1.25em;
@@ -194,7 +194,7 @@
 }
 
 .image.editorModule .externalLink::after {
-  font-family: "Material Icons";
+  font-family: "Material Symbols";
   font-size: 40px;
   position: absolute;
   top: 5px;
