--- a/client/css/overlays/welcome.css
+++ b/client/css/overlays/welcome.css
@@ -113,7 +113,7 @@
   margin-top: 0;
   margin-bottom: 8px;
 }
-.mainStateDetails .material-icons {
+.mainStateDetails .material-symbols {
   top: 5px;
   position: relative;
 }
@@ -175,7 +175,7 @@
     font-size: 14px;
     margin-right: 10px;
   }
-  .mainStateDetails .material-icons {
+  .mainStateDetails .material-symbols {
     font-size: 18px;
     top: 3px;
   }
