--- a/client/css/fonts.css
+++ b/client/css/fonts.css
@@ -231,14 +231,34 @@
   font-family: "Material Symbols";
   font-style: normal;
   font-weight: 400;
-  src: url("i/fonts/MaterialSymbols-Outlined.woff2") format("woff2");
+  src: url("i/fonts/MaterialSymbols-Outlined-Fill.woff2") format("woff2");
+  font-display: block;
+}
+
+@font-face {
+  font-family: "Material Symbols NoFill";
+  font-style: normal;
+  font-weight: 400;
+  src: url("i/fonts/MaterialSymbols-Outlined-NoFill.woff2") format("woff2");
   font-display: block;
 }
 
 
 .material-symbols, .font-material-symbols {
   font-family: "Material Symbols";
-  font-variation-settings: 'FILL' 1, 'wght' 400, 'GRAD' 0, 'opsz' 24;
+  font-weight: normal;
+  font-style: normal;
+  font-size: 24px;
+  display: inline-block;
+  line-height: 1;
+  text-transform: none;
+  word-wrap: normal;
+  white-space: nowrap;
+  direction: ltr;
+}
+
+.material-symbols-nofill, .font-material-symbols-nofill {
+  font-family: "Material Symbols NoFill";
   font-weight: normal;
   font-style: normal;
   font-size: 24px;
