restore intext class (fixes external link symbol in Similar To metadata)

--- a/client/css/fonts.css
+++ b/client/css/fonts.css
@@ -270,6 +270,10 @@
   direction: ltr;
 }
 
+.material-symbols.intext {
+  font-size: 20px;
+}
+
 @font-face {
   font-family: "Noto Emoji";
   font-style: normal;
