css tweak to show controlpoints in edit even if not in jsonedit

--- a/client/css/widgets/line.css
+++ b/client/css/widgets/line.css
@@ -21,6 +21,6 @@ body.edit .selectedInEdit > .controlPoint,
 body.jsonEdit .selectedInEdit > * > .controlPoint,
 body.edit .selectedInEdit > * > .controlPoint,
 .selectedInEdit .controlPoint {
-    display: flex;
+    display: flex !important;
 }
 
