added a flexible popup system to ask the user for input and provide documentation

--- a/client/css/editor/controls/routine.css
+++ b/client/css/editor/controls/routine.css
@@ -2,5 +2,10 @@
   padding-left: 10px;
 }
 .routine-editor-operation {
-  padding-left: 20px;
+  padding-left: 10px;
+}
+
+.routine-editor-operation-parameter {
+  color: blue;
+  font-weight: bold;
 }
