Editor Help with SVG Colors
Fixes #2454.  This is only a proof of concept.

I would like to have been able to get this to work with actual editor buttons, but that seemed impossible, so I settled on showing it in the JSON Editor like the duplicate widget button. I used that area as an example, but I could never get the div to display properly.  It does work in place of the duplicate widget button now as a demo. I could use some help getting the new div right.  The button is there, it just doesn't work as it should.  I've attached an image to show how this looks.  Pretty cool.

--- a/client/css/jsonedit.css
+++ b/client/css/jsonedit.css
@@ -241,6 +241,17 @@ i.error   { color: var(--textHighlightColor3); font-weight: bold; }
   flex-direction: column;
 }
 
+#jeSVGColors {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  right: 0;
+  height: 100%;
+  width: var(--commandPaneWidth);
+  display: flex;
+  flex-direction: column;
+}
+
 #jeWidgetLayers {
   background: var(--backgroundColor);
   position: absolute;
@@ -518,6 +529,12 @@ body.jsonEdit #toolbar {
 }
 
 #jeCommands .context{
+  font-weight: bold;
+  margin: 1px;
+  margin-top: 8px;
+}
+
+#jeSVGColors .context{
   font-weight: bold;
   margin: 1px;
   margin-top: 8px;
