--- a/client/css/editor/controls/routine.css
+++ b/client/css/editor/controls/routine.css
@@ -2,7 +2,9 @@
   padding-left: 10px;
 }
 .routine-editor-operation {
-  padding-left: 10px;
+  border-left: 1px solid #222;
+  padding: 5px;
+  padding-left: 1px;
 }
 
 .routine-editor-operation-parameter {
