changed a few property defaults and added `defaultStyle`

--- a/client/css/widgets/zoomy.css
+++ b/client/css/widgets/zoomy.css
@@ -1,3 +1,12 @@
+.zoomy.widget {
+  transform-origin: top left;
+  box-sizing: border-box;
+}
+
+.zoomy.widget.defaultStyle {
+  background: white;
+}
+
 .zoomy.widget.animate_zoomedPlayers {
   transition: transform 0.5s ease-in-out;
 }
