added lockChildren property

--- a/client/css/widgets/zoomy.css
+++ b/client/css/widgets/zoomy.css
@@ -4,6 +4,10 @@
   position: relative;
 }
 
+.zoomy.widget.lockChildren:not(.zoomed) * {
+  pointer-events: none;
+}
+
 .zoomy.widget.defaultStyle {
   background: white;
 }
